[package]
name = "random-lon-lat-generator"
version = "0.1.0"
authors = ["Aaron Zingerle <aaron.zingerle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# required for buliding wasm target
crate-type = ["cdylib", "rlib"]

[dependencies]
# dependencies for generating random numbers
rand = { version = "0.8.3", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

# dependency for interaction between wasm and javascript
wasm-bindgen = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"